--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,33 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+
+.DS_Store
+/dist
+
+# Archives
+*.zip
+*.7z
+*.rar
+*.tar
+*.tar.gz
+
+# Local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+/nbproject
+/netbeans*
